add_library(aux_make_schema STATIC make_schema.cpp)
target_link_libraries(aux_make_schema PRIVATE aux_unit_conversion exception)
target_link_libraries(aux_make_schema PUBLIC nlohmann_json)
target_include_directories(aux_make_schema PUBLIC include)

add_library(aux_schema_validation STATIC schema_validation.cpp)
target_link_libraries(aux_schema_validation PRIVATE nlohmann_json_schema_validator aux_json)
target_link_libraries(aux_schema_validation PUBLIC nlohmann_json)
target_include_directories(aux_schema_validation PUBLIC include)

add_library(aux_schema_generation STATIC schema_generation.cpp)
target_link_libraries(aux_schema_generation PUBLIC componentfactory full_factory aux_json)
target_link_libraries(aux_schema_generation PUBLIC nlohmann_json)
target_include_directories(aux_schema_generation PUBLIC include)

add_library(aux_schema_key_insertion STATIC schema_key_insertion.cpp)
target_link_libraries(aux_schema_key_insertion PRIVATE aux_json)
target_link_libraries(aux_schema_key_insertion PUBLIC nlohmann_json)
target_include_directories(aux_schema_key_insertion PUBLIC include)
