add_library(json_validation STATIC json_validation.cpp)
target_link_libraries(json_validation PRIVATE nlohmann_json nlohmann_json_schema_validator aux_json)
target_include_directories(json_validation PUBLIC include)

add_library(schema_generation STATIC schema_generation.cpp)
target_link_libraries(schema_generation PRIVATE componentfactory)
target_include_directories(schema_generation PUBLIC include)
