# add_executable(indexmanager_test IndexmanagerTest.cpp)

# target_link_libraries(indexmanager_test PUBLIC indexmanager aux_make_schema aux_schema_validation nlohmann_json_schema_validator)
# target_link_libraries(indexmanager_test PUBLIC gtest gtest_main gmock)



# add_test(
#   NAME indexmanager_test
#   COMMAND indexmanager_test
#   )
